--- a/markdown_EAF2.Rmd
+++ b/markdown_EAF2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Obtaining the effect allele frequencies (EAFs) for Gene-Tissue Expression (GTEx) ribosomal protein (RP) expression quantitative trait loci (eQTL)"
+title: "Obtaining the EAF for the cross-tissue RP eQTL analysis in GTex"
 date: "April 26, 2020"
 #runtime: shiny
 output: html_document
@@ -43,20 +43,28 @@ library(igraph)
 load("V8_master_EAF.Rdata")
 ```
 
-# Background
+## Abbreviations and definitions
+ - Gene-Tissue Expression (GTex) Project -- database of tissue-specific gene expression and SNPs associated with gene expression
+ - Ribosomal protein (RP)
+ - expression quantitative trait loci (eQTL) -- SNPs associated with gene expression
+ - significance threshold (Q-value for 'eGene' status <0.05 & nominal P<5x10-6) -- analyses here use the set of GTex eQTLs meet this criteria
+ - Minor allele frequency (MAF)
+ - Effect allele frequency (EAF)
+
+## Background
 
 GTEx coded their eQTL analysis such that the effect allele is the alternate allele. But the alternate allele is not always the minor allele. The effect sizes ("betas") for the eQTLs refer to the slope of the linear regressions "computed as the effect of the alternative allele (ALT) relative to the reference allele (REF) in the human genome reference (i.e., the eQTL effect allele is the ALT allele)" -- which is not always the minor allele.
 
 In order to know which of the alleles is the true minor allele, I needed to obtain annotation information for the SNPs. 
 
-# Goal
+## Goal
 
 - Get annotation data from`SNPnexus`
 - Calculate EAF
 - Use`sqldf` to merge EAF back into the master RP dataset
 - Provide statistics for the EAF for GTEx ribosomal protein eQTLs (threshold qval<0.05 & P<5x10-6)
 
-# Total number of eQTLs across tissues (threshold qval<0.05 & P<5x10-6) and number of unique eQTLs
+## Total number of eQTLs across tissues (threshold qval<0.05 & P<5x10-6) and number of unique eQTLs
 ```{r}
 # Total number eQTLs across the RP genes 
 dim(stringent_RP_sig_beta)
@@ -65,7 +73,7 @@ dim(stringent_RP_sig_beta)
 snp=unique(stringent_RP_sig_beta$SNP)
 length(snp)
 ```
-# Annotation from `SNPnexus`
+## Annotation from `SNPnexus`
 
 [*SNPnexus*](https://www.snp-nexus.org/v4/) is an online annotation tool for SNPs (with an option for GRCh38/hg38). 
 
@@ -73,7 +81,7 @@ I entered our list of 996 unique eQTLs (threshold qval<0.05 & P<5x10-6) into `SN
 
 (Side note: Separate `SNPnexus` annotation files also provide genomic consequence and deleteriosness for these SNPs. I can make plots with this data later...)
 
-# Determine EAF
+## Determine EAF
 ```{r, message=FALSE, warning=FALSE}
 # Read in the dummy copy of the SNPnexus results called my_data2
 my_data2 <- read.table("C:/Users/charl/Dropbox/Harvard/ribosomal_proteins/Main_Tables_Paper/v8/gen_coords_v8_unique.txt", 
@@ -106,14 +114,14 @@ merged=sqldf("select *
 merged_EAF <- merged[order(merged$SNP),]
 
 ```
-# Summary of EAF for GTEx ribosomal protein eQTLs
+## Summary of EAF for GTEx ribosomal protein eQTLs
 
 ```{r}
 hist(merged$EAF, col = c("green"),
      main="Histogram of EAF values for ribosomal protein eQTLs")
 summary(merged$EAF)
 ```
-# Provide an interactive table of the primary ribosomal protein eQTL data (selected variables, including EAF)
+## Interactive table of the primary RP eQTL data (selected variables, including EAF)
 
 In the table, "effect_allele" refers to the alternate allele in GTEx. The "other_allele" is the reference allele.
 The variable "match" signifies "1" when the reference allele is the minor allele and "0" when the alternate allele is the minor allele.
@@ -126,14 +134,14 @@ interactive_merged=merged[my_table_cols]
 datatable(interactive_merged, options = list(pageLength = 5))
 ```
 
-# Commentary on eQTL interactive table 
+## Commentary on eQTL interactive table 
 
 - Most of the SNPs not annotated in `SNPnexus` appear to be small indels, except for one for prostate (row id='987634') that is a long interspersed nuclear element (LINE), and oddly, is coded by GTEx as the reference. (It will get dropped in MR analyses for prostate.) 
 
 - I noticed one of the SNPs in the GTEx files was labeled with two rsids: rs4909,rs12012747. This meant it was not originally found in the `SNPnexus` lookup. I went in an verified that the two rsids refer to the same SNP and chose rs12012747 to label it in our master file. 
 
 
-# Data cleaning: one SNP in GTEx had two rsids
+## Data cleaning: one SNP in GTEx had two rsids
 ```{r}
 merged_EAF=merged
 
@@ -145,10 +153,11 @@ merged_EAF$EAF=ifelse(merged_EAF$SNP=='rs12012747', 0.331126, merged_EAF$EAF)
 
 ### Rename the 'eaf' variable in the master file to reflect that it is the MAF in GTEx (not the actual EAF; the actual EAF is labled 'EAF')
 colnames(merged_EAF)[31] <- "maf_in_GTEx"
+write.csv(merged_EAF, 'merged_EAF.csv')
 ```
 
-# Acknowledgement language for manuscript
+## Acknowledgement language for manuscript
 'The Genotype-Tissue Expression (GTEx) Project was supported by the Common Fund of the Office of the Director of the National Institutes of Health, and by NCI, NHGRI, NHLBI, NIDA, NIMH, and NINDS. The data used for the analyses described in this manuscript were obtained from: the GTEx Portal on 04/01/2020' 
 
-# Github
-I've started a [*Github*](https://github.com/charleendadams/ribosomal_protein_eQTLs) repository to organize the files and scripts for this project. 
+## Github
+I've started a [*Github*](https://github.com/charleendadams/ribosomal_protein_eQTLs) repository to organize the files and scripts for this project. If Github refuses to open through the link, copy this link into your browser: https://github.com/charleendadams/ribosomal_protein_eQTLs
